# Agentic-Starter-Kits

./: README.md  ollama-config.yaml  utils.py
.github/ISSUE_TEMPLATE/: -bug----what_happen-jpg-.md  bug_report.md
agents/base/langgraph-react-agent/: README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/langgraph-react-agent/examples/: execute_ai_service_locally.py
agents/base/langgraph-react-agent/scripts/: deploy.py  setup-config.py
agents/base/langgraph-react-agent/src/langgraph_react_agent_base/: agent.py
agents/base/langgraph_react_agent/: README.md  ai_service.py  deploy.sh  init.sh  main.py  pyproject.toml  requirements.txt  template.env
agents/base/langgraph_react_agent/benchmarking_data/: benchmarking_data.jsonl
agents/base/langgraph_react_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py  query_existing_deployment.py
agents/base/langgraph_react_agent/k8s/: deployment.yaml
agents/base/llamaindex-websearch-agent/: README.md  ai_service.py  pyproject.toml  template.env  utils.py
agents/base/llamaindex_websearch_agent/: ai_service.py  config.toml.example  main.py  pyproject.toml  requirements.txt  template.env  utils.py
agents/base/llamastack_agent/: main.py
agents/community/langgraph-agentic-rag/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
agents/community/langgraph_agentic_rag/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/: README.md  utils.py
apps/base/nextjs-chat-with-ai-service/: .gitignore  README.md  template.env
(+39 files in other folders)
