[tool.poetry]
name = "langgraph_react_agent_base"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-openai = "^0.2.0"
openai = ">=1.0.0"
langgraph = ">0.2,<0.3"
pytest = "^8.3.3"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.eval.dependencies]
setuptools = "<80.9.0"
unitxt = "^1.24.0"
datasets = "3.6.0"
nltk = "^3.9.1"
rouge-score = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
